<resources>
    <string name="app_name">Nymph</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="menu_delete">Delete</string>
    <string name="title_activity_bookmark">Bookmark</string>
    <string name="btn_fly_start">Start Fly</string>
    <string name="btn_fly_stop">Stop Fly</string>
    <string name="label_fly">Fly To Location</string>
    <string name="btn_set_new_loc">Set New Location</string>
    <string name="bookmark">Bookmark</string>
    <string name="move_step">Move Step</string>
    <string name="move_step_hint">Move Step</string>
    <string name="loc_input_hint">Latitude , Longitude</string>
    <string name="location">Location:</string>
    <string name="fly_time">Fly Time(s)</string>
    <string name="bookmark_name">Bookmark Name</string>
    <string name="no_data">No Bookmarks</string>
    <string name="save">Save</string>

    <string name="dummy_content">Nymph</string>
</resources>
