<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/stickBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:background="@color/trans"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_set_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/trans"
            android:contentDescription="@string/location"
            android:src="@drawable/ic_set_loc" />

        <ImageButton
            android:id="@+id/btn_fly_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/trans"
            android:contentDescription="@string/btn_fly_start"
            android:src="@drawable/ic_flight_takeoff" />

        <ImageButton
            android:id="@+id/btn_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/trans"
            android:contentDescription="@string/bookmark"
            android:src="@drawable/ic_bookmark" />


    </LinearLayout>

    <include
        layout="@layout/joystick_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>